# robocup_demo

scripts/: sim_start.sh
src/brain/: CMakeLists.txt
src/brain/config/: brain.yaml
src/brain/src/: brain_log.cpp
src/vision/: CMakeLists.txt
src/vision/include/booster_vision/model/trt/: impl.h
src/vision/src/model/: CMakeLists.txt  detector.cc
src/vision/src/model/trt/: CMakeLists.txt  impl.cpp  yolov8_det.cpp
